--- a/arm64v8/Dockerfile
+++ b/arm64v8/Dockerfile
@@ -33,4 +33,6 @@ RUN git clone https://github.com/zsh-users/zsh-autosuggestions ~/.zsh/zsh-autosu
 RUN echo "source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> ~/.zshrc
 RUN echo "ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE='fg=111'" >> ~/.zshrc
 
+RUN ln -s /lib/ld-linux-aarch64.so.1 /lib/ld-linux.so.3
+
 WORKDIR /root
