--- a/ubuntu24.04/Dockerfile
+++ b/ubuntu24.04/Dockerfile
@@ -9,10 +9,10 @@ WORKDIR /root
 
 RUN dpkg --add-architecture i386
 RUN apt update && apt upgrade -y
-RUN apt-get update && apt-get install -y netcat
+RUN apt-get update && apt-get install -y netcat-openbsd
 RUN apt-get dist-upgrade
 
-RUN apt install python3 python3-dev python3-pip -y
+RUN apt install python3 python3-dev python3-pip python3-venv -y
 RUN apt install git curl wget vim zsh gdb make tmux -y
 RUN apt install libffi-dev build-essential libssl-dev libc6-i386 libc6-dbg gcc-multilib -y
 
@@ -23,12 +23,17 @@ RUN apt install ruby-dev -y
 
 RUN gem install one_gadget
 
-RUN pip3 install unicorn
-RUN pip3 install keystone-engine
-RUN pip3 install pathlib2
-RUN pip3 install pwntools
-RUN pip3 install capstone ropper
-RUN pip3 install ropgadget
+# Create a virtual environment and activate it
+RUN python3 -m venv /root/venv
+ENV PATH="/root/venv/bin:$PATH"
+
+RUN pip install --upgrade pip
+RUN pip install unicorn
+RUN pip install keystone-engine
+RUN pip install pathlib2
+RUN pip install pwntools
+RUN pip install capstone ropper
+RUN pip install ropgadget
 
 RUN apt install file -y
 RUN git clone https://github.com/hugsy/gef /root/gef
