--- a/ubuntu22.04/Dockerfile
+++ b/ubuntu22.04/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONIOENCODING UTF-8
 ENV LC_CTYPE C.UTF-8
 ARG DEBIAN_FRONTEND=noninteractive #no interactive
 
-WORKDIR root
+WORKDIR /root
 
 RUN dpkg --add-architecture i386
 RUN apt update && apt upgrade -y
@@ -33,18 +33,5 @@ RUN pip3 install ropgadget
 RUN apt install file -y
 RUN git clone https://github.com/hugsy/gef ./gef
 RUN echo source ~/gef/gef.py >> ~/.gdbinit
-
-RUN wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh || true
-
-RUN mkdir -p "$HOME/.zsh"
-RUN git clone https://github.com/sindresorhus/pure.git "$HOME/.zsh/pure"
-RUN echo "fpath+=("$HOME/.zsh/pure")\nautoload -U promptinit; promptinit\nprompt pure" >> ~/.zshrc
-
-RUN git clone https://github.com/zsh-users/zsh-syntax-highlighting.git
-RUN echo "source ./zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> ~/.zshrc
-
-RUN git clone https://github.com/zsh-users/zsh-autosuggestions ~/.zsh/zsh-autosuggestions
-RUN echo "source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh" >> ~/.zshrc
-RUN echo "ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE='fg=111'" >> ~/.zshrc
 
 RUN apt install net-tools openssh-server -y
