--- a/ubuntu24.04/Dockerfile
+++ b/ubuntu24.04/Dockerfile
@@ -12,14 +12,14 @@ RUN apt update && apt upgrade -y
 RUN apt-get update && apt-get install -y netcat-openbsd
 RUN apt-get dist-upgrade
 
-RUN apt install python3 python3-dev python3-pip python3-venv -y
-RUN apt install git curl wget vim zsh gdb make tmux -y
-RUN apt install libffi-dev build-essential libssl-dev libc6-i386 libc6-dbg gcc-multilib -y
+RUN apt-get install python3 python3-dev python3-pip python3-venv -y
+RUN apt-get install git curl wget vim zsh gdb make tmux -y
+RUN apt-get install libffi-dev build-essential libssl-dev libc6-i386 libc6-dbg gcc-multilib -y
 
 RUN apt-get install libcapstone-dev -y
 RUN apt-get install libc6:i386 -y
-RUN apt install ruby-full -y
-RUN apt install ruby-dev -y
+RUN apt-get install ruby-full -y
+RUN apt-get install ruby-dev -y
 
 RUN gem install one_gadget
 
@@ -35,7 +35,7 @@ RUN pip install pwntools
 RUN pip install capstone ropper
 RUN pip install ropgadget
 
-RUN apt install file -y
+RUN apt-get install file -y
 RUN git clone https://github.com/hugsy/gef /root/gef
 RUN echo "source /root/gef/gef.py" >> ~/.gdbinit
 
