--- a/ubuntu20.04/Dockerfile
+++ b/ubuntu20.04/Dockerfile
@@ -25,5 +25,12 @@ RUN apt install libcapstone-dev -y
 RUN git clone https://github.com/hugsy/gef ./gef
 RUN echo source ~/gef/gef.py >> ~/.gdbinit
 
-RUN apt install ruby-full -y
+RUN wget https://cache.ruby-lang.org/pub/ruby/3.1/ruby-3.1.0.tar.gz && \
+    tar -xzvf ruby-3.1.0.tar.gz && \
+    cd ruby-3.1.0 && \
+    ./configure && \
+    make && \
+    make install && \
+    cd .. && \
+    rm -rf ruby-3.1.0 ruby-3.1.0.tar.gz
 RUN gem install one_gadget seccomp-tools
